--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Aymen Fezai",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "hbs": "^4.0.1",
     "socket.io": "^2.1.1",
     "twit": "^2.2.10"
   }
